# web/swagger.json
@@ -324,7 +324,7 @@
 				}
 			}
 		},
-		"/book/get/{id}": {
+		"/book/getid/{id}": {
 			"get": {
 				"summary": "Get a book by his ID",
 				"parameters": [
@@ -346,13 +346,21 @@
 				}
 			}
 		},				
-		"/book/get": {
+		"/book/get/{nb_page}": {
 			"get": {
-				"summary": "Get all books",
-				"parameters": [],
+				"summary": "Get all books with 50 per page",
+				"parameters": [
+					{
+		              "name": "nb_page",
+		              "required": true,
+		              "type": "integer",
+		              "format": "int64",
+		              "in": "path"
+		            }
+				],
 				"responses": {
 					  "200": {
-					  	"description": "Table with all informations about all books"
+					  	"description": "Table with all informations about all books with 50 per page"
 					  },
 					  "400": {
 					  	"description": "Error message"
